--- a/BPMMobile/Pages/00KCY/BG001604/FlowUndoDetail.html
+++ b/BPMMobile/Pages/00KCY/BG001604/FlowUndoDetail.html
@@ -38,6 +38,9 @@
             <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
                 <label>工作牌申请明细表</label>
             </div>
+            <div id="mxlist">
+
+            </div>
             <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx" style="margin-top:0.5rem;display:none;">
                 添加工作牌申请明细表
                 <span class="mui-icon mui-icon-plusempty"></span>
