--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209001/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209001/FlowCreate.html
@@ -31,7 +31,11 @@
             <div class="mui-input-row">
                 <label>填写日期</label>
                 <input type="text" id="ftxrq" readonly />
-                <input type="hidden" id="fdate" readonly/>
+               
+            </div>
+            <div class="mui-input-row">
+                <label>日报日期</label>
+                <input type="text" id="fdate" readonly />
             </div>
             <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
                 <label>日报信息</label>
@@ -98,6 +102,7 @@
                 添加日报信息
                 <span class="mui-icon mui-icon-plusempty"></span>
             </a>
+           
         </div>
         <div class="mui-btn-row" id="SaveD">
             <button class="mui-btn mui-btn-primary" type="button" id="commitbt" onclick="Save()">提交</button>
