--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209002/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209002/FlowCreate.html
@@ -21,7 +21,7 @@
             <div class="mui-input-row">
                 <label>销售人员</label>
                 <input type="text" id="fxsry" readonly />
-                <input type="hidden" id="fno" readonly/>
+                <input type="hidden" id="fno" readonly />
             </div>
             <div class="mui-input-row">
                 <label>销售区域<i style="color:red;">*</i></label>
@@ -55,7 +55,7 @@
                         </div>
                         <div class="mui-col-xs-4" style="display:flex;">
                             <label>是否新客户<i style="color:red;">*</i></label>
-                            <input type="text" id="fif_xkh" name="fif_xkh" readonly placeholder="请选择"/>
+                            <input type="text" id="fif_xkh" name="fif_xkh" readonly placeholder="请选择" />
                         </div>
                     </div>
                     <div class="mui-row cutOffLine" style="padding:3vw;">
@@ -82,12 +82,13 @@
                 <label>市场活动计划</label>
             </div>
             <div id="mxlist_sc">
-               
+
             </div>
             <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx_sc" style="margin-top:0.5rem;">
                 添加市场活动计划
                 <span class="mui-icon mui-icon-plusempty"></span>
             </a>
+            <input type="hidden" id="fxsyno" readonly />
         </div>
         <div class="mui-btn-row" id="SaveD">
             <button class="mui-btn mui-btn-primary" type="button" id="commitbt" onclick="Save()">提交</button>
