--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209002/FlowUndoDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209002/FlowUndoDetail.html
@@ -50,7 +50,7 @@
                 添加市场活动计划
                 <span class="mui-icon mui-icon-plusempty"></span>
             </a>
-
+            <input type="hidden" id="fxsyno" readonly />
             <div class="mui-input-row" id="csd">
                 <label>加签</label>
                 <div class="mui-switch mui-switch-blue" id="csswitch">
