--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209005/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209005/FlowCreate.html
@@ -87,7 +87,7 @@
                 <div class="border border-t upload-img" style="top:0rem;">
                     <!--上传图片-->
                     <div class="clearfix upload-btn" id="children-bg">
-                        <label class="label">附件</label>
+                        <label class="label">客户资质附件</label>
                         <span class="tips" id="imageCount"><!--已添加0张--></span>
                         <!--上传图片按钮  -->
                         <span class="upload-addbtn">
