--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209009/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209009/FlowCreate.html
@@ -71,7 +71,7 @@
                     <textarea rows="2" id="fxszz" readonly></textarea>
                     <input type="hidden" id="fxszzbm" readonly/>
                 </div>
-                <div class="mui-col-xs-4" style="display:flex;">
+                <div class="mui-col-xs-4" style="display:none;">
                     <label>区域经理<i style="color:red;">*</i></label>
                     <textarea rows="2" id="fqyjl" readonly></textarea>
                     <input type="hidden" id="fqyjlno" readonly />
