--- a/BPMMobile/Pages/BG0702002/FlowCreate.html
+++ b/BPMMobile/Pages/BG0702002/FlowCreate.html
@@ -430,7 +430,7 @@
                     xml = xml + ' <FormData>';
                     xml = xml + '<BPM_SGGSBMLXD_A>';
                     xml = xml + '<fbillno>自动生成</fbillno>';
-                    xml = xml + '<fhname>' + fhdate + '</fhname>';
+                    xml = xml + '<fhname>' + fhname + '</fhname>';
                     xml = xml + '<fhdept>' + fhdept + '</fhdept>';
                     xml = xml + '<fhdate>' + fhdate + '</fhdate>';
                     xml = xml + '<tel>' + tel + '</tel>';
