--- a/BPMMobile/Pages/BaseFlow/FlowUndoDetail.html
+++ b/BPMMobile/Pages/BaseFlow/FlowUndoDetail.html
@@ -450,6 +450,8 @@
                                         watch();
                                         $(".imgdiv").on('tap', function () {
                                             console.log($(this)[0].id);
+                                            console.log(navigator.userAgent);
+                                          
                                             XuntongJSBridge.call('showFile', {
                                                 'fileName': attachArray[$(this)[0].id].name,
                                                 'fileExt': attachArray[$(this)[0].id].type,
