--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209001/FlowAskDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209001/FlowAskDetail.html
@@ -29,7 +29,11 @@
             <div class="mui-input-row">
                 <label>填写日期</label>
                 <input type="text" id="ftxrq" readonly />
-                <input type="hidden" id="fdate" readonly />
+               
+            </div>
+            <div class="mui-input-row">
+                <label>日报日期</label>
+                <input type="text" id="fdate" readonly />
             </div>
             <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
                 <label>日报信息</label>
