--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209001/FlowUndoDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209001/FlowUndoDetail.html
@@ -29,7 +29,11 @@
             <div class="mui-input-row">
                 <label>填写日期</label>
                 <input type="text" id="ftxrq" readonly />
-                <input type="hidden" id="fdate" readonly />
+               
+            </div>
+            <div class="mui-input-row">
+                <label>日报日期</label>
+                <input type="text" id="fdate" readonly />
             </div>
             <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
                 <label>日报信息</label>
@@ -39,55 +43,55 @@
                 添加日报信息
                 <span class="mui-icon mui-icon-plusempty"></span>
             </a>
-    
-    <div class="mui-input-row" id="csd">
-        <label>加签</label>
-        <div class="mui-switch mui-switch-blue" id="csswitch">
-            <div class="mui-switch-handle"></div>
-        </div>
-    </div>
-    <div id="signbody">
-        <div class="mui-input-row" id="signPerDiv">
-            <label>加签人</label>
-            <span class="mui-navigate-right"></span>
-            <input name="signPer" id="signPer" value="" readonly="readonly" placeholder="请选择加签人" />
-        </div>
-        <div class="mui-input-row adl">
-            <label>加签模式</label>
-        </div>
-        <div class="mui-input-row" id="signModeDiv" style="height:5.25rem;">
-            <ul class="mui-table-view mui-table-view-radio">
-                <li class="mui-table-view-cell mui-selected" id="sxsl">
-                    <a class="mui-navigate-right" id="sxsa">
-                        顺序加签
-                    </a>
-                </li>
-                <li class="mui-table-view-cell" id="pxsl">
-                    <a class="mui-navigate-right" id="pxsa">
-                        平行加签
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="mui-input-row adl">
-            <label>加签回转</label>
-        </div>
-        <div class="mui-input-row" id="signModeDiv" style="height:5.25rem;">
-            <ul class="mui-table-view mui-table-view-radio">
-                <li class="mui-table-view-cell mui-selected" id="hdbjdl">
-                    <a class="mui-navigate-right" id="hdbjda">
-                        回到本节点
-                    </a>
-                </li>
-                <li class="mui-table-view-cell" id="jrxjdl">
-                    <a class="mui-navigate-right" id="jrxjda">
-                        进入下一节点
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    </form>
+
+            <div class="mui-input-row" id="csd">
+                <label>加签</label>
+                <div class="mui-switch mui-switch-blue" id="csswitch">
+                    <div class="mui-switch-handle"></div>
+                </div>
+            </div>
+            <div id="signbody">
+                <div class="mui-input-row" id="signPerDiv">
+                    <label>加签人</label>
+                    <span class="mui-navigate-right"></span>
+                    <input name="signPer" id="signPer" value="" readonly="readonly" placeholder="请选择加签人" />
+                </div>
+                <div class="mui-input-row adl">
+                    <label>加签模式</label>
+                </div>
+                <div class="mui-input-row" id="signModeDiv" style="height:5.25rem;">
+                    <ul class="mui-table-view mui-table-view-radio">
+                        <li class="mui-table-view-cell mui-selected" id="sxsl">
+                            <a class="mui-navigate-right" id="sxsa">
+                                顺序加签
+                            </a>
+                        </li>
+                        <li class="mui-table-view-cell" id="pxsl">
+                            <a class="mui-navigate-right" id="pxsa">
+                                平行加签
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mui-input-row adl">
+                    <label>加签回转</label>
+                </div>
+                <div class="mui-input-row" id="signModeDiv" style="height:5.25rem;">
+                    <ul class="mui-table-view mui-table-view-radio">
+                        <li class="mui-table-view-cell mui-selected" id="hdbjdl">
+                            <a class="mui-navigate-right" id="hdbjda">
+                                回到本节点
+                            </a>
+                        </li>
+                        <li class="mui-table-view-cell" id="jrxjdl">
+                            <a class="mui-navigate-right" id="jrxjda">
+                                进入下一节点
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </form>
     <div class="mui-table-view" style="margin-bottom:3rem;">
         <div class="mui-table-view-cell  mui-collapse mui-active">
             <a class="mui-navigate-right" href="#" style="background-color:#00a0ea;color:white;font-size:0.75rem;">
