--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209002/FlowDoneDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209002/FlowDoneDetail.html
@@ -50,7 +50,7 @@
                 添加市场活动计划
                 <span class="mui-icon mui-icon-plusempty"></span>
             </a>
-
+            <input type="hidden" id="fxsyno" readonly />
         </form>
 
         <div class="mui-table-view" style="margin-bottom:1rem;">
