--- a/BPMMobile/Pages/BG0702002/FlowUndoDetail.html
+++ b/BPMMobile/Pages/BG0702002/FlowUndoDetail.html
@@ -672,7 +672,7 @@
                     xml = xml + ' <FormData>';
                     xml = xml + '<BPM_SGGSBMLXD_A>';
                     xml = xml + '<fbillno>自动生成</fbillno>';
-                    xml = xml + '<fhname>' + fhdate + '</fhname>';
+                    xml = xml + '<fhname>' + fhname + '</fhname>';
                     xml = xml + '<fhdept>' + fhdept + '</fhdept>';
                     xml = xml + '<fhdate>' + fhdate + '</fhdate>';
                     xml = xml + '<tel>' + tel + '</tel>';
@@ -756,7 +756,7 @@
             xml = xml + ' <FormData>';
             xml = xml + '<BPM_SGGSBMLXD_A>';
             xml = xml + '<fbillno>' + fbillno + '</fbillno>';
-            xml = xml + '<fhname>' + fhdate + '</fhname>';
+            xml = xml + '<fhname>' + fhname + '</fhname>';
             xml = xml + '<fhdept>' + fhdept + '</fhdept>';
             xml = xml + '<fhdate>' + fhdate + '</fhdate>';
             xml = xml + '<tel>' + tel + '</tel>';
@@ -833,7 +833,7 @@
                     xml = xml + ' <FormData>';
                     xml = xml + '<BPM_SGGSBMLXD_A>';
                     xml = xml + '<fbillno>' + fbillno + '</fbillno>';
-                    xml = xml + '<fhname>' + fhdate + '</fhname>';
+                    xml = xml + '<fhname>' + fhname + '</fhname>';
                     xml = xml + '<fhdept>' + fhdept + '</fhdept>';
                     xml = xml + '<fhdate>' + fhdate + '</fhdate>';
                     xml = xml + '<tel>' + tel + '</tel>';
